Closed Bug 329555 Opened 20 years ago Closed 19 years ago

New Mail Notification Alert is not clickable

Categories

(Thunderbird :: Mail Window Front End, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird2.0

People

(Reporter: moz-bugzilla2, Assigned: mscott)

References

Details

(Keywords: fixed1.8.1.3)

Attachments

(3 files, 1 obsolete file)

Previously, prior to bug 312930, you could click the mailbox name in the alert to open thunderbird and go to that particular mailbox. With the new format of alert, none of the display seems to be linked. I'm imagining that the best approach would be to make the specific messages shown a link to that message in thunderbird. Outlook 2003 seems to even offer option to flag or delete the message. Might be nice to have those options as well as spam flagging the message.
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird2.0
*** Bug 329905 has been marked as a duplicate of this bug. ***
*** Bug 363772 has been marked as a duplicate of this bug. ***
Grrr, I've been trying to make the message summary info inside the alert clickable without much success, the on click handlers just wouldn't fire. The alert uses a stack: http://lxr.mozilla.org/mozilla/source/mail/base/content/newmailalert.xul#57 And event propogation only works for the top most element in the stack. In this case the close button. So we aren't getting any on click event propagation for the summary text. I wonder if we can re-write the XUL to not use a stack for the close button.
(In reply to comment #4) > Grrr, I've been trying to make the message summary info inside the alert > clickable without much success, the on click handlers just wouldn't fire. > ... > And event propogation only works for the top most element in the stack. In this > case the close button. Did you try setting mousethrough="always" on the stack element? http://www.xulplanet.com/references/elemref/ref_XULElement.html#attr_mousethrough
Teune, thanks so much for jumping in with that suggestion, it worked like a charm. You made my day much easier :).
While I was implementing this feature, I cleaned up some style rules in the alert, most notably making the subject bold and getting rid of the " - " filler text between the sender and the subject. In the second image you can see how it looks when you are hovering over one of the messages in the alert. Unfortunately it doesn't show the pointer cursor but you'd see a pointer cursor on the text as well indicating that it is clickable.
Attached patch first cut at a fix (obsolete) — Splinter Review
Selecting the message in the alert switches folders and selects the message in the 3-pane. If there is no open 3-pane, open a new window with the folder and message key. Changed some style rules to make the subject bold and to give the close button a 2px margin at the top. What doesn't work: * If the 3-pane is minimized, the window doesn't open and take focus. Currently the only code I'm aware of that can do this is in C++: http://lxr.mozilla.org/mozilla/source/mailnews/base/src/nsMessengerWinIntegration.cpp#126 and can't be written in JS. We might have to get creative to leverage that routine from the alert. *If the folder isn't in the current folder pane view, we fail to select the folder. We might not address issue #2 for this release but the first issue is something I think we need to solve.
This leverages the existing gAlertListener callback implemented in nsMessengerWinIntegration.cpp. From there we can activate the dom window for the current 3-pane. We should really have a callback from the widget out to the new mail alert javascript and from there access gAlertListener. I'll try to do that before I checkin, but if I run out of time before the deadline, I wanted to have this in hand...
Attachment #257446 - Attachment is obsolete: true
Attachment #257459 - Flags: superreview?(bienvenu)
By the way, this change is branch only. There were some interface changes on the trunk that will require a trunk port.
Attachment #257459 - Flags: superreview?(bienvenu) → superreview+
Fixed on the branch. Leaving open so I can port this to the trunk. When I do, I'll try to fix the dependency on gAlertListener in mailWidgets.xml so we set it as an attribute on the foldersummary element in newmailalert.xul
Keywords: fixed1.8.1.3
I've ported this patch to the trunk.
now fixed on the trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Double-click on the tray icon now activates/restores the 3-pane, rather than re-displaying the alert (2pre-0306). Intended?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: