Bug #329555 --> Make the new mail notification clickable. Clicking on a message in the alert will select the folder and the message. Fix some padding issues with the close button. Make the subject bold. sr=bienvenu