mozilla/mailnews/base/src/nsMessengerWinIntegration.cpp
@@ -75,7 +75,7 @@
 #include "nsIPrefService.h"
 #include "nsIPrefBranch.h"
 #include "nsISupportsPrimitives.h"
-
+#include "nsIInterfaceRequestorUtils.h"
 #include "nsNativeCharsetUtils.h"
 
 #ifdef MOZ_THUNDERBIRD
@@ -621,14 +621,32 @@ nsresult nsMessengerWinIntegration::AlertFinished()
 
 nsresult nsMessengerWinIntegration::AlertClicked()
 {
+#ifdef MOZ_THUNDERBIRD
+  nsresult rv;
+  nsCOMPtr<nsIMsgMailSession> mailSession = do_GetService(NS_MSGMAILSESSION_CONTRACTID, &rv);
+  NS_ENSURE_SUCCESS(rv,rv);
+  nsCOMPtr<nsIMsgWindow> topMostMsgWindow;
+  rv = mailSession->GetTopmostMsgWindow(getter_AddRefs(topMostMsgWindow));
+  if (topMostMsgWindow)
+  {
+    nsCOMPtr<nsIDocShell> rootDocShell;
+    rv = topMostMsgWindow->GetRootDocShell(getter_AddRefs(rootDocShell));
+    NS_ENSURE_SUCCESS(rv, rv);
+    
+    nsCOMPtr<nsIDOMWindowInternal> domWindow(do_GetInterface(rootDocShell, &rv));
+    NS_ENSURE_SUCCESS(rv, rv);
+    
+    activateWindow(domWindow);
+  }
+#else
   // make sure we don't insert the icon in the system tray since the user clicked on the alert.
   mSuppressBiffIcon = PR_TRUE;
-  
+
   nsXPIDLCString folderURI;
   GetFirstFolderWithNewMail(getter_Copies(folderURI));
 
   openMailWindow(NS_LITERAL_STRING("mail:3pane").get(), folderURI);
- 
+#endif
   return NS_OK;
 }
 
